--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets//images/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home || Gadget Heaven</title>
+    <title>Gadgets || Gadget Heaven</title>
   </head>
   <body>
     <div id="root"></div>
